tests/baselines/reference/primitiveTypeAssignment.errors.txt
==== tests/cases/compiler/primitiveTypeAssignment.ts (3 errors) ====
    var x = any;
            ~~~
!!! error TS2095: Could not find symbol 'any'.
    
    var y = number;
            ~~~~~~
!!! error TS2095: Could not find symbol 'number'.
    
    var z = boolean;
            ~~~~~~~
!!! error TS2095: Could not find symbol 'boolean'.
    